--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "gsap": "^3.13.0",
     "next": "16.0.1",
     "react": "19.2.0",
